--- a/src/main/resources/META-INF/native-image/io.github.xiaochenxt/xc-spring-boot-native/native-image.properties
+++ b/src/main/resources/META-INF/native-image/io.github.xiaochenxt/xc-spring-boot-native/native-image.properties
@@ -6,4 +6,5 @@ Args = -H:+UnlockExperimentalVMOptions \
 -H:+AddAllCharsets \
 -H:+ForeignAPISupport \
 --enable-native-access=ALL-UNNAMED \
+-Dtruffle.UseFallbackRuntime=true \
 --features=io.github.xiaochenxt.aot.BasicFeature
