--- a/src/main/resources/META-INF/native-image/io.github.xiaochenxt/xc-spring-boot-native/native-image.properties
+++ b/src/main/resources/META-INF/native-image/io.github.xiaochenxt/xc-spring-boot-native/native-image.properties
@@ -1,10 +1,11 @@
 Args = -H:+UnlockExperimentalVMOptions \
 --no-fallback \
---install-exit-handlers \
+-H:+InstallExitHandlers \
 --enable-http \
 --enable-https \
 -H:+AddAllCharsets \
 -H:+ForeignAPISupport \
 --enable-native-access=ALL-UNNAMED \
 -Dtruffle.UseFallbackRuntime=true \
---features=io.github.xiaochenxt.aot.BasicFeature
+--features=io.github.xiaochenxt.aot.BasicFeature \
+-J-XX:+UseCompactObjectHeaders
